2.0.1-stable (2012-??-??)
	* Removed: Element class. It wasn't used.
	* Added: Basic validation and repair methods for broken input data.

2.0.0-stable (2012-08-08)
	* VObject is now a separate project from SabreDAV. See the SabreDAV
	  changelog for version information before 2.0.
	* New: VObject library now uses PHP 5.3 namespaces.
	* New: It's possible to specify lists of parameters when constructing
	  properties.
	* New: made it easier to construct the FreeBusyGenerator.